--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown>
-					**Reveal.js**
-
-					https://revealjs.com/
+				<section>
+					<strong style="font-size:10rem;">Reveal.js</strong>
 				</section>
 				<section data-markdown>
 					Reveal.js는 HTML기반의 오픈 소스 프리젠테이션 프레임워크
@@ -348,6 +346,8 @@
 				</section>
 				<section>
 					<h1>끗 🫠</h1>
+					<p><a href="https://revealjs.com" target="_blank">https://revealjs.com</a></p>
+					<p><a href="https://snippetbuilder.com" target="_blank">https://snippetbuilder.com</a></p>
 				</section>
 			</div>
 		</div>
